# salt-tool-macos-formula

./: .copier-answers.yml  .cruft.json  .gitlab-ci.yml  .pre-commit-config.yaml  .rstcheck.cfg  .salt-lint  .travis.yml  FORMULA  README.md  kitchen.yml  pillar.example  pyproject.toml  release.config.js
_modules/: dooti.py  macinspect.py  macosdefaults.py  macprofile.py  macsettings.py  pmset.py
_states/: dooti.py  macosdefaults.py  macprofile.py  pmset.py
doc/: conf.py  overview.rst
doc/modules/: dooti.rst  macosdefaults.rst  macprofile.rst  pmset.rst
doc/settings/: animations.rst  behavior.rst  bluetooth.rst  dock.rst  index.rst  localization.rst  menubar.rst  security.rst  siri.rst  timemachine.rst  touch.rst
doc/states/: index.rst
docs/: README.rst  TOFS_pattern.rst  _README.rst.tpl  conf.py  index.rst  map.jinja.rst  toolsuite.rst
docs/modules_execution/: dooti.rst  index.rst  macosdefaults.rst  macprofile.rst  macsettings.rst  pmset.rst
docs/modules_state/: dooti.rst  index.rst  macosdefaults.rst  macprofile.rst  pmset.rst
docs/states/: index.rst  rosetta.rst
tool-macos/: init.sls  map.jinja  services.sls
tool-macos/onchanges/: adprivacyd.sls  bluetoothd.sls  cfprefsd.sls  controlcenter.sls  coreaudiod.sls  corebrightnessd.sls  dock.sls  finder.sls  init.sls  mdnsresponder.sls  notificationcenter.sls  quicklook.sls  socketfilterfw.sls  systemuiserver.sls
tool-macos/require/: init.sls
tool-macos/settings/: init.sls
tool_macos/: init.sls  libtofs.jinja  libtofsstack.jinja  map.jinja  post-map.jinja  services.sls
tool_macos/_mapdata/: init.sls
(+1564 files in other folders)
