[tool.poetry]
name = "salt-tool-macos-config"
version = "0.1.0"
description = "Saltstack execution/state modules and states to manage macOS settings"
authors = ["jeanluc"]

[tool.poetry.dependencies]
python = "^3.6.2"
pyobjc = "^8.2"

[tool.poetry.dev-dependencies]
salt = "^3004"
Sphinx = "^4"
salt-lint = "^0.8.0"
yamllint = "^1.26.3"
black = "^21.12b0"
mypy = "^0.931"
flake8 = "^4"
sphinx-material-saltstack = "^1.0.5"
sphinx-material = "^0.0.35"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-fulltoc = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
