[tool.poetry]
name = "salt_tool_macos"
version = "1.0.0"
description = "Saltstack execution/state modules and states to manage macOS"
authors = ["lkubb"]

[tool.poetry.dependencies]
python = "^3.6.2"
pyobjc-framework-UniformTypeIdentifiers = "^7.2"

[tool.poetry.dev-dependencies]
salt = "^3004"
black = "^21.12b0"
mypy = "^0.931"
flake8 = "^4"
Sphinx = "^4"
# this is the official saltstack theme
# sphinx-material-saltstack = "^1.0.5"
sphinx-rtd-theme = "^1.0.0"
# fulltoc has an issue with recent Sphinx versions ('easily' fixable in the source code though)
sphinxcontrib-fulltoc = "^1.2.0"

[tool.slsdoc]
ignore = ["_mapdata", "_onchanges", "_require"]
include_empty = true
renderer = "depth"

[tool.slsdoc.depth_renderer]
max_depth = 1
target = "docs/states"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
